--- a/shared-files/golang/.golangci.yml
+++ b/shared-files/golang/.golangci.yml
@@ -83,7 +83,7 @@ linters:
 
 linters-settings:
   goimports:
-    local-prefixes: github.com/orange-cloudavenue/{ repo.name }}
+    local-prefixes: github.com/orange-cloudavenue/{{ repo.name }}
 
   gci:
     # Section configuration to compare against.
@@ -101,7 +101,7 @@ linters-settings:
       - prefix(github.com/hashicorp/terraform-plugin-framework-validators/)
       - prefix(github.com/hashicorp)
       - prefix(github.com/FrangipaneTeam)
-      - prefix(github.com/orange-cloudavenue/{ repo.name }},github.com/orange-cloudavenue/cloudavenue-sdk-go,github.com/orange-cloudavenue/infrapi-sdk-go)
+      - prefix(github.com/orange-cloudavenue/{{ repo.name }},github.com/orange-cloudavenue/cloudavenue-sdk-go,github.com/orange-cloudavenue/infrapi-sdk-go)
       - blank # Blank section: contains all blank imports. This section is not present unless explicitly enabled.
       - dot # Dot section: contains all dot imports. This section is not present unless explicitly enabled.
     skip-generated: true
