--- a/sync.yml
+++ b/sync.yml
@@ -22,6 +22,7 @@ group:
       orange-cloudavenue/terraform-plugin-framework-validators
       orange-cloudavenue/terraform-plugin-framework-planmodifiers
       orange-cloudavenue/terraform-provider-cloudavenue
+      orange-cloudavenue/cloudavenue-sdk-go
 
   # Terraform provider repositories
   - files:
@@ -69,4 +70,5 @@ group:
     repos: |
       orange-cloudavenue/terraform-plugin-framework-validators
       orange-cloudavenue/terraform-plugin-framework-planmodifiers
+      orange-cloudavenue/cloudavenue-sdk-go
     
