--- a/.github/workflows/changelog_dependabot.yml
+++ b/.github/workflows/changelog_dependabot.yml
@@ -17,7 +17,9 @@ jobs:
         name: Checkout 
         with:
           token: ${{ secrets.TOKEN }}
-          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+          ref: ${{github.event.pull_request.head.ref}}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
       - name: Update Changelog Header
         run: |
           cat << EOF > .changelog/$PR_NUMBER.txt
