feat: check if changelog exist before launch generation

--- a/.github/workflows/go_golangci-lint.yml
+++ b/.github/workflows/go_golangci-lint.yml
@@ -9,6 +9,7 @@ permissions:
 jobs:
   check-lint-requirements:
     runs-on: ubuntu-latest
+    name: "Check Lint Requirements"
     outputs:
       need-lint: ${{ steps.filter.outputs.go }}
     steps:
