--- a/.github/workflows/changelog_dependabot.yml
+++ b/.github/workflows/changelog_dependabot.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   changelog-dependabot:
     runs-on: ubuntu-latest
+    name: "Generate"
     if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' }}
     steps:
       - name: Fetch dependabot metadata
