--- a/.github/workflows/changelog_generate-changelog.yml
+++ b/.github/workflows/changelog_generate-changelog.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   generate-changelog:
+    name: "Generate Changelog"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,7 +18,7 @@ jobs:
           fetch-depth: 0
           submodules: false
           ref: main
-      - name: Generate Changelog
+      - name: Script to generate changelog
         uses: orange-cloudavenue/generate-changelog-action@v0.1.9
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
