feat: add PR check and labeler conventional commits

--- a/.github/workflows/pr_label_size.yml
+++ b/.github/workflows/pr_label_size.yml
@@ -8,6 +8,7 @@ permissions:
 
 jobs:
   auto-label-size:
+    name: "Calculate PR Size"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
