--- a/.github/workflows/pr_conventional_commits.yml
+++ b/.github/workflows/pr_conventional_commits.yml
@@ -2,7 +2,9 @@ name: "PR Conventional Commits"
 
 on:
   workflow_call:
-
+    secrets:
+      TOKEN:
+        required: true
 permissions:
   pull-requests: write
 
@@ -17,3 +19,4 @@ jobs:
             task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert"]'
             custom_labels: '{"feat": "feature", "fix": "fix", "docs": "documentation", "test": "test", "ci": "CI/CD", "refactor": "refactor", "perf": "performance", "chore": "chore", "revert": "revert", "wip": "WIP"}'
             add_scope_label: 'true'
+            token: ${{ secrets.TOKEN }}
