--- a/.github/workflows/pr_label_size.yml
+++ b/.github/workflows/pr_label_size.yml
@@ -2,6 +2,9 @@ name: "PR Size"
 
 on:
   workflow_call:
+    secrets:
+      TOKEN:
+        required: true
 
 permissions:
   pull-requests: write
@@ -16,7 +19,7 @@ jobs:
       - name: Label PR based on size
         uses: cbrgm/pr-size-labeler-action@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} 
+          github_token: ${{ secrets.TOKEN }} 
           github_repository: ${{ github.repository }} 
           github_pr_number: ${{ github.event.number }} 
           config_file_path: '.github/pull-request-size.yml'
