chore: add check update requirements for request update CI

--- a/sync.yml
+++ b/sync.yml
@@ -9,6 +9,7 @@ group:
       orange-cloudavenue/terraform-plugin-framework-validators
       orange-cloudavenue/terraform-plugin-framework-planmodifiers
       orange-cloudavenue/terraform-plugin-framework-superschema
+      orange-cloudavenue/orange-cloudavenue.github.io
 
   # ALL Golang repositories
   - files:
