--- a/.github/workflows/doc_publish.yml
+++ b/.github/workflows/doc_publish.yml
@@ -14,6 +14,7 @@ permissions:
 
 jobs:
   check-publish-requirements:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     outputs:
       need-publish: ${{ steps.filter.outputs.doc }}
