--- a/.github/workflows/pr_conventional_commits.yml
+++ b/.github/workflows/pr_conventional_commits.yml
@@ -18,5 +18,5 @@ jobs:
         with:
             task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert"]'
             custom_labels: '{"feat": "feature", "fix": "fix", "docs": "documentation", "test": "test", "ci": "CI/CD", "refactor": "refactor", "perf": "performance", "chore": "chore", "revert": "revert", "wip": "WIP"}'
-            add_scope_label: 'true'
+            add_scope_label: false
             token: ${{ secrets.TOKEN }}
