--- a/.github/workflows/changelog_generate-new-version.yml
+++ b/.github/workflows/changelog_generate-new-version.yml
@@ -12,7 +12,7 @@ on:
             
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
       - uses: actions/checkout@v4
         name: Checkout 
