--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -8,6 +8,6 @@ permissions:
 
 jobs:
   assign-author:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
       - uses: toshimaru/auto-author-assign@v2.1.1
