--- a/.github/workflows/pr_label_size.yml
+++ b/.github/workflows/pr_label_size.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   auto-label-size:
     name: "Calculate PR Size"
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4 
