--- a/.github/workflows/tag_check-tag.yml
+++ b/.github/workflows/tag_check-tag.yml
@@ -11,7 +11,7 @@ on:
             type: string
 jobs:
   check-tag-already-exists:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
       - uses: actions/checkout@v4
         name: Checkout 
