--- a/.github/workflows/doc_publish.yml
+++ b/.github/workflows/doc_publish.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   check-publish-requirements:
     if: ${{ github.event_name != 'workflow_dispatch' }}
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     outputs:
       need-publish: ${{ steps.filter.outputs.doc }}
     steps:
@@ -29,7 +29,7 @@ jobs:
     if: ${{ needs.check-publish-requirements.outputs.need-publish == 'true' || github.event_name == 'workflow_dispatch' }}
     needs: check-publish-requirements
     name: github page
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
       - uses: actions/checkout@v4
       - name: Configure Git Credentials
