--- a/.github/workflows/go_unit-test-tf-provider.yml
+++ b/.github/workflows/go_unit-test-tf-provider.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   check-test-requirements:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     outputs:
       need-test: ${{ steps.filter.outputs.go }}
     steps:
@@ -33,7 +33,7 @@ jobs:
   testsunit:
     needs: check-test-requirements
     if: ${{ needs.check-test-requirements.outputs.need-test == 'true' }}
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
