fix: token in PR opened by external user

--- a/.github/workflows/pr_label_size.yml
+++ b/.github/workflows/pr_label_size.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Label PR based on size
         uses: cbrgm/pr-size-labeler-action@main
         with:
-          github_token: ${{ secrets.TOKEN }} 
+          github_token: ${{ secrets.TOKEN || secrets.GITHUB_TOKEN }} 
           github_repository: ${{ github.repository }} 
           github_pr_number: ${{ github.event.number }} 
           config_file_path: '.github/pull-request-size.yml'
