--- a/.github/workflows/pr_conventional_commits.yml
+++ b/.github/workflows/pr_conventional_commits.yml
@@ -5,6 +5,7 @@ on:
     secrets:
       TOKEN:
         required: true
+
 permissions:
   pull-requests: write
 
@@ -19,4 +20,4 @@ jobs:
             task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert"]'
             custom_labels: '{"feat": "feature", "fix": "fix", "docs": "documentation", "test": "test", "ci": "CI/CD", "refactor": "refactor", "perf": "performance", "chore": "chore", "revert": "revert", "wip": "WIP"}'
             add_scope_label: false
-            token: ${{ secrets.TOKEN }}
+            token: ${{ secrets.TOKEN || secrets.GITHUB_TOKEN }}
