fix: token in PR opened by external user

--- a/.github/workflows/pr_conventional_commits.yml
+++ b/.github/workflows/pr_conventional_commits.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   pull-requests: write
+  contents: read
 
 jobs:
   validate-pr-title:
@@ -20,4 +21,4 @@ jobs:
             task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert"]'
             custom_labels: '{"feat": "feature", "fix": "fix", "docs": "documentation", "test": "test", "ci": "CI/CD", "refactor": "refactor", "perf": "performance", "chore": "chore", "revert": "revert", "wip": "WIP"}'
             add_scope_label: false
-            token: ${{ secrets.TOKEN || secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.GITHUB_TOKEN }}
