--- a/sync.yml
+++ b/sync.yml
@@ -2,28 +2,26 @@
 
 # ! Group of repositories sync
 group:
-  # # MIT License
-  # - files:
-  #     # * License
-  #     - source: shared-files/license/licenses/MIT/LICENSE
-  #       dest: LICENSE
-  #     # * License Header
-  #     - source: shared-files/license/licenses/MIT/HEADER
-  #       dest: .github/LICENSE_HEADER
-  #     # * LicenseRC
-  #     - source: shared-files/license/licenserc.toml.njk
-  #       dest: licenserc.toml
-  #       template: true
-  #   repos: |
-  #     orange-cloudavenue/terraform-plugin-framework-validators
-  #     orange-cloudavenue/terraform-plugin-framework-planmodifiers
-  #     orange-cloudavenue/terraform-plugin-framework-supertypes
-  #     orange-cloudavenue/terraform-plugin-framework-superschema
-  #     orange-cloudavenue/terraform-provider-cloudavenue
-  #     orange-cloudavenue/cloudavenue-sdk-go
-  #     orange-cloudavenue/terraform-resource-templates
-  #     orange-cloudavenue/terraform-provider-cloudavenue
-  #     orange-cloudavenue/orange-cloudavenue.github.io
+  # MPL License
+  - files:
+      # * License
+      - source: shared-files/license/licenses/MPL/LICENSE
+        dest: LICENSE
+      # * LicenseRC
+      - source: shared-files/license/licenserc.yaml.njk
+        dest: .licenserc.yaml
+        template: 
+          license: MPL-2.0
+    repos: |
+      orange-cloudavenue/terraform-plugin-framework-validators
+      # orange-cloudavenue/terraform-plugin-framework-planmodifiers
+      # orange-cloudavenue/terraform-plugin-framework-supertypes
+      # orange-cloudavenue/terraform-plugin-framework-superschema
+      # orange-cloudavenue/terraform-provider-cloudavenue
+      # orange-cloudavenue/cloudavenue-sdk-go
+      # orange-cloudavenue/terraform-resource-templates
+      # orange-cloudavenue/terraform-provider-cloudavenue
+      # orange-cloudavenue/orange-cloudavenue.github.io
 
 
   # ALL Golang repositories
