--- a/.github/workflows/go_report-card.yml
+++ b/.github/workflows/go_report-card.yml
@@ -7,7 +7,8 @@ permissions:
   contents: read
   
 jobs:
-  check-lint-requirements:
+  refresh-go-report-card:
     runs-on: [self-hosted, Linux]
+    name: "Refresh"
     steps:
       - uses: creekorful/goreportcard-action@v1.0
